# botcast

./: .env.example  .gitignore  CURRENT_STATUS.md  PROJECT_CONTEXT.md  README.md  WEBHOOK_SETUP.md  add_test_bot.py  alembic.ini  bot_runner.py  check_stats.py  main.py  pyproject.toml  requirements.txt  setup_webhook.py  test_api.py  worker.py
alembic/: env.py
alembic/versions/: 15c61425fee7_initial_migration_create_users_table.py  1690e658bdd6_add_telegram_bots_table.py  259918df42d6_add_broadcast_tables.py  9e89b5beaabf_add_subscribers_table.py
app/: main.py
app/api/: __init__.py  auth.py  bots.py  bots.py.bak  broadcasts.py  deps.py  users.py  webhook.py
app/core/: config.py  database.py  redis.py
app/models/: __init__.py  broadcast.py  broadcast_message.py  subscriber.py  telegram_bot.py  user.py
app/schemas/: __init__.py  broadcast.py  subscriber.py  telegram_bot.py  user.py
app/services/: auth.py  telegram.py
app/workers/: broadcast.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: BotList.jsx  CreateBotForm.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
frontend/src/services/: api.js  auth.js  bots.js
frontend/src/store/: authStore.js  botStore.js
